--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,4 +9,4 @@ phases:
             - npm run build:prod
     post_build:
         commands:
-            - aws s3 cp dist s3://cmnty.club --recursive
+            - aws s3 cp dist s3://cmnty.club --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
